Minor alignment fix

--- a/wordpress/wp-content/themes/modernizm/style.css
+++ b/wordpress/wp-content/themes/modernizm/style.css
@@ -289,7 +289,7 @@ textarea {
 
 .entry-content ul#resource-tags {
 	margin-top: 12px;
-	margin-left: -8px;
+	margin-left: -3px;
 	list-style-type: none;
 	max-width: 985px;
 }
